<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:ns0="http://schemas.android.com/apk/res/android" xmlns:ns1="http://schemas.android.com/apk/res-auto" ns0:layout_width="match_parent" ns0:layout_height="match_parent" ns0:fitsSystemWindows="true" ns0:clipChildren="false" ns0:background="#16131e">
  <com.topdon.lib.core.view.TitleView ns0:id="@+id/title_view" ns0:layout_width="0dp" ns0:layout_height="wrap_content" ns1:layout_constraintStart_toStartOf="parent" ns1:layout_constraintEnd_toEndOf="parent" ns1:layout_constraintTop_toTopOf="parent" />
  <androidx.core.widget.NestedScrollView ns0:layout_width="match_parent" ns0:layout_height="0dp" ns0:overScrollMode="never" ns0:scrollbars="none" ns1:layout_constraintTop_toBottomOf="@id/title_view" ns1:layout_constraintBottom_toBottomOf="parent">
    <androidx.constraintlayout.widget.ConstraintLayout ns0:layout_width="wrap_content" ns0:layout_height="match_parent" ns0:layout_marginTop="31dp" ns0:paddingHorizontal="20dp">
      <TextView ns0:id="@+id/tv_title" ns0:layout_width="wrap_content" ns0:layout_height="wrap_content" ns0:textColor="@color/white" ns0:textSize="16sp" ns0:text="@string/ts004_guide_text8" ns1:layout_constraintTop_toTopOf="parent" ns1:layout_constraintStart_toStartOf="parent" />
      <androidx.constraintlayout.widget.ConstraintLayout ns0:layout_width="wrap_content" ns0:layout_height="wrap_content" ns1:layout_constraintStart_toStartOf="parent" ns1:layout_constraintEnd_toEndOf="parent" ns1:layout_constraintTop_toBottomOf="@+id/tv_title">

        <com.topdon.tc001.view.ConnectionGuideView ns0:id="@+id/main_guide_tip1" ns0:layout_width="match_parent" ns0:layout_height="wrap_content" ns0:layout_marginTop="16dp" ns1:guide_text="@string/ts004_guide_text9" ns1:guide_icon_show="true" ns1:guide_icon="@drawable/ic_connection_tip4" ns1:layout_constraintTop_toTopOf="parent" />
        <com.topdon.tc001.view.ConnectionGuideView ns0:id="@+id/main_guide_tip2" ns0:layout_width="match_parent" ns0:layout_height="wrap_content" ns0:layout_marginTop="16dp" ns1:guide_icon_show="true" ns1:guide_text="@string/ts004_guide_text10" ns1:guide_icon="@drawable/ic_connection_tip5" ns1:layout_constraintTop_toBottomOf="@+id/main_guide_tip1" />
        <com.topdon.tc001.view.ConnectionGuideView ns0:id="@+id/main_guide_tip3" ns0:layout_width="match_parent" ns0:layout_height="wrap_content" ns0:layout_marginTop="16dp" ns0:visibility="gone" ns1:guide_icon_show="true" ns1:guide_text="@string/ts004_guide_text11" ns1:guide_icon="@drawable/ic_connect_tip6" ns1:layout_constraintTop_toBottomOf="@+id/main_guide_tip2" />
        <com.topdon.tc001.view.ConnectionGuideView ns0:id="@+id/main_guide_tip4" ns0:layout_width="match_parent" ns0:layout_height="wrap_content" ns0:layout_marginTop="16dp" ns1:guide_text="@string/ts004_guide_text12" ns1:guide_icon_show="false" ns1:layout_constraintTop_toBottomOf="@+id/main_guide_tip3" />

        <com.topdon.tc001.view.ConnectionGuideView ns0:id="@+id/disconnect_tip1" ns0:layout_width="match_parent" ns0:layout_height="wrap_content" ns0:layout_marginTop="16dp" ns1:guide_text="@string/ts004_disconnect_tips2" ns1:guide_icon_show="true" ns0:visibility="gone" ns1:guide_icon="@drawable/ic_disconnect_tip1" ns1:layout_constraintTop_toTopOf="parent" />
        <com.topdon.tc001.view.ConnectionGuideView ns0:id="@+id/disconnect_tip2" ns0:layout_width="match_parent" ns0:layout_height="wrap_content" ns0:layout_marginTop="16dp" ns1:guide_icon_show="true" ns0:visibility="gone" ns1:guide_text="@string/ts004_disconnect_tips3" ns1:guide_icon="@drawable/ic_disconnect_tip2" ns1:layout_constraintTop_toBottomOf="@+id/disconnect_tip1" />
        <TextView ns0:id="@+id/iv_tvSetting" ns0:layout_width="wrap_content" ns0:layout_height="wrap_content" ns0:visibility="gone" ns0:text="去设置" ns0:textColor="@color/chart_line_min" ns0:textSize="@dimen/app_small_font" ns0:layout_marginTop="30dp" ns1:layout_constraintTop_toBottomOf="@+id/disconnect_tip2" ns1:layout_constraintStart_toStartOf="parent" ns1:layout_constraintEnd_toEndOf="parent" />
      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>